button and animations

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-    <div class="image-frame">
-        <div id="image-container"></div>
+    <div id="image-container">
+        <img id="image" />
     </div>
+    <button id="button" onclick="loadImage()">capy capy</button>
 </body>
 
 </html>
