--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Random Capybara Image</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap">
     <script src="script.js"></script>
 </head>
 
