--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Random Capybara Image</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
+
     <script src="script.js"></script>
 </head>
 
